--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <footer>
+      <ul>
+        <li>Phone: 0883651987</li>
+        <li>Email: sreyreahan@gmail.com</li>
+        <li>Street: </li>
+      </ul>  
+    </footer>
 </body>
 </html>
